#2357 [Fixed] Form Group: Top spacing after image list

--- a/packages/dso-toolkit/src/components/form/form-group.scss
+++ b/packages/dso-toolkit/src/components/form/form-group.scss
@@ -191,6 +191,11 @@
   }
 }
 
+// to do: integrate this into spacing.scss [#2217]
+.dso-img-list + .form-group {
+  margin-block-start: units.$vertical-spacing-xlarge;
+}
+
 #{css-form-variables.$form-selectors} {
   .dso-field-container {
     position: relative;
